feat: UI update

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,14 @@
     "esModuleInterop": true,
     "noImplicitAny": true,
     "sourceMap": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "outDir": "dist",
     "moduleResolution": "node",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "jsx": "react-jsx",
+    "paths": {
+      "@r/*": ["src/renderer/*"]
+    }
   },
   "include": ["src"]
 }
