--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
+    "r:build": "vite build --config vite.renderer.config.ts",
+    "r:dev": "vite serve --config vite.renderer.config.ts",
     "lint": "eslint --ext .ts,.tsx ."
   },
   "keywords": [],
@@ -38,20 +40,30 @@
     "@types/koa-bodyparser": "^4.3.10",
     "@types/koa-router": "^7.4.4",
     "@types/koa-static": "^4.0.2",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "@vitejs/plugin-react": "^4.0.4",
+    "autoprefixer": "^10.4.15",
     "electron": "^26.1.0",
     "eslint": "^8.0.1",
+    "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-import": "^2.25.0",
     "npm-watch": "^0.11.0",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3",
     "ts-node": "^10.0.0",
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "electron-squirrel-startup": "^1.0.0",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.0",
-    "koa-static": "^5.0.0"
+    "koa-static": "^5.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
