feat: simple log

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
   "plugins": ["import"],
   "rules": {
     // turn on errors for missing imports
-    "import/no-unresolved": "error"
+    "import/no-unresolved": "error",
+    "@typescript-eslint/no-explicit-any": "off"
   },
   "settings": {
     "import/parsers": {
