--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "classnames": "^2.3.2",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^8.1.0",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.0",
