--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "r:build": "vite build --config vite.renderer.config.ts",
-    "r:dev": "vite serve --config vite.renderer.config.ts",
+    "r:build": "export NODE_ENV=production && vite build --config vite.renderer.config.ts",
+    "r:dev": "export NODE_ENV=development && vite serve --config vite.renderer.config.ts",
     "lint": "eslint --ext .ts,.tsx ."
   },
   "keywords": [],
@@ -57,6 +57,8 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.199",
+    "ahooks": "^3.7.8",
     "classnames": "^2.3.2",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.1.0",
@@ -64,6 +66,7 @@
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
